Fix checklist item alignments and step edit alignment [SCI-6961] (#4242)

--- a/app/assets/stylesheets/steps/step.scss
+++ b/app/assets/stylesheets/steps/step.scss
@@ -270,6 +270,7 @@
     margin-left: auto;
     position: absolute;
     right: 0;
+    top: 0;
 
     .fas {
       font-size: 14px;
